infrastructure/cdk/cdk.out/AcademiaSharedDatabase.template.json
{
 "Description": "Academia Shared Aurora PostgreSQL database (db.t4g.micro)",
 "Resources": {
  "SharedVpc96F0F614": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "academia-shared-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/Resource"
   }
  },
  "SharedVpcPublicSubnet1SubnetE66A2D86": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1/Subnet"
   }
  },
  "SharedVpcPublicSubnet1RouteTableB2E560ED": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1/RouteTable"
   }
  },
  "SharedVpcPublicSubnet1RouteTableAssociationD4F9EC47": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SharedVpcPublicSubnet1RouteTableB2E560ED"
    },
    "SubnetId": {
     "Ref": "SharedVpcPublicSubnet1SubnetE66A2D86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "SharedVpcPublicSubnet1DefaultRoute57DB288E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SharedVpcIGW869E5885"
    },
    "RouteTableId": {
     "Ref": "SharedVpcPublicSubnet1RouteTableB2E560ED"
    }
   },
   "DependsOn": [
    "SharedVpcVPCGW9C69B7A5"
   ],
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "SharedVpcPublicSubnet2SubnetE33911D4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2/Subnet"
   }
  },
  "SharedVpcPublicSubnet2RouteTableF58D8939": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2/RouteTable"
   }
  },
  "SharedVpcPublicSubnet2RouteTableAssociationAFAB5570": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SharedVpcPublicSubnet2RouteTableF58D8939"
    },
    "SubnetId": {
     "Ref": "SharedVpcPublicSubnet2SubnetE33911D4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "SharedVpcPublicSubnet2DefaultRouteD5FF70D7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SharedVpcIGW869E5885"
    },
    "RouteTableId": {
     "Ref": "SharedVpcPublicSubnet2RouteTableF58D8939"
    }
   },
   "DependsOn": [
    "SharedVpcVPCGW9C69B7A5"
   ],
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "SharedVpcIsolatedSubnet1Subnet2FB46B24": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet1/Subnet"
   }
  },
  "SharedVpcIsolatedSubnet1RouteTable562E4FE1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet1/RouteTable"
   }
  },
  "SharedVpcIsolatedSubnet1RouteTableAssociationA9441ADE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SharedVpcIsolatedSubnet1RouteTable562E4FE1"
    },
    "SubnetId": {
     "Ref": "SharedVpcIsolatedSubnet1Subnet2FB46B24"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "SharedVpcIsolatedSubnet2Subnet96BA40FA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet2/Subnet"
   }
  },
  "SharedVpcIsolatedSubnet2RouteTable4B21FD77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet2/RouteTable"
   }
  },
  "SharedVpcIsolatedSubnet2RouteTableAssociation85A5BE49": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SharedVpcIsolatedSubnet2RouteTable4B21FD77"
    },
    "SubnetId": {
     "Ref": "SharedVpcIsolatedSubnet2Subnet96BA40FA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "SharedVpcIGW869E5885": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "academia-shared-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/IGW"
   }
  },
  "SharedVpcVPCGW9C69B7A5": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "SharedVpcIGW869E5885"
    },
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/VPCGW"
   }
  },
  "SharedVpcSecretsManagerEndpointSecurityGroup0AA9D055": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "AcademiaSharedDatabase/SharedVpc/SecretsManagerEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "SharedVpc96F0F614",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "SharedVpc96F0F614",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "academia-shared-vpc"
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/SecretsManagerEndpoint/SecurityGroup/Resource"
   }
  },
  "SharedVpcSecretsManagerEndpoint70017CEB": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SharedVpcSecretsManagerEndpointSecurityGroup0AA9D055",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "SharedVpcIsolatedSubnet1Subnet2FB46B24"
     },
     {
      "Ref": "SharedVpcIsolatedSubnet2Subnet96BA40FA"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "academia-shared-vpc"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedVpc/SecretsManagerEndpoint/Resource"
   }
  },
  "DbSecurityGroupE9D701AD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Academia shared Aurora security group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "SharedVpc96F0F614",
        "CidrBlock"
       ]
      },
      "Description": "Allow PostgreSQL from VPC",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Ref": "SharedVpc96F0F614"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/DbSecurityGroup/Resource"
   }
  },
  "DbSecret685A0FA5": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Academia shared database credentials",
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "PasswordLength": 32,
     "SecretStringTemplate": "{\"username\":\"academia_admin\"}"
    },
    "Name": "academia/shared/database/credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/DbSecret/Resource"
   }
  },
  "DbSecretAttachment0609CE05": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DbSecret685A0FA5"
    },
    "TargetId": {
     "Ref": "SharedAuroraCluster30CC7507"
    },
    "TargetType": "AWS::RDS::DBCluster"
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/DbSecret/Attachment/Resource"
   }
  },
  "SharedAuroraClusterSubnets46235870": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnets for SharedAuroraCluster database",
    "SubnetIds": [
     {
      "Ref": "SharedVpcIsolatedSubnet1Subnet2FB46B24"
     },
     {
      "Ref": "SharedVpcIsolatedSubnet2Subnet96BA40FA"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedAuroraCluster/Subnets/Default"
   }
  },
  "SharedAuroraCluster30CC7507": {
   "Type": "AWS::RDS::DBCluster",
   "Properties": {
    "BackupRetentionPeriod": 7,
    "CopyTagsToSnapshot": true,
    "DBClusterIdentifier": "academia-shared-aurora",
    "DBClusterParameterGroupName": "default.aurora-postgresql16",
    "DBSubnetGroupName": {
     "Ref": "SharedAuroraClusterSubnets46235870"
    },
    "DatabaseName": "academia_production",
    "DeletionProtection": true,
    "Engine": "aurora-postgresql",
    "EngineVersion": "16.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "Port": 5432,
    "ServerlessV2ScalingConfiguration": {
     "MaxCapacity": 4,
     "MinCapacity": 0.5
    },
    "StorageEncrypted": true,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DbSecurityGroupE9D701AD",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedAuroraCluster/Resource"
   }
  },
  "SharedAuroraClusterwriter2B5607CE": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBClusterIdentifier": {
     "Ref": "SharedAuroraCluster30CC7507"
    },
    "DBInstanceClass": "db.serverless",
    "Engine": "aurora-postgresql",
    "PromotionTier": 0,
    "PubliclyAccessible": false
   },
   "DependsOn": [
    "SharedVpcIsolatedSubnet1RouteTableAssociationA9441ADE",
    "SharedVpcIsolatedSubnet2RouteTableAssociation85A5BE49"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/SharedAuroraCluster/writer/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WQTW/CMAyGfwv3kLEi7c7KhDitoqjXyXUNBIpTxQ4IVf3vE+WjEzvZ75vHH3Fik+nUTkZwljFWh3HtStvmCngwcJafljCxbdGgSTdcZKnJYlk7zGPJpFdvyFY+Kq2hrGnwB28m4tGBOs9P2GTBnUBp6LFkpcCkC1A6w+U+9K5mqoC7I7GantsAUtHgF1eNd6wmJ4zB6WURfGz6HV6NIksfdGeEMJDKERi2FGyb9/ped81uYQ1hS/pn9hN4felMqMS2c1AoQSitoygFc/vdc4f55z/jQfZiyaLASF1nViQ+Buzv+R21idoZ9hXZvbydksS+f9jJaC/OjUNkdUeyq1v8BT2k5aLVAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "AcademiaSharedDatabase/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "Shared VPC ID",
   "Value": {
    "Ref": "SharedVpc96F0F614"
   },
   "Export": {
    "Name": "academia-shared-vpc-id"
   }
  },
  "ClusterEndpoint": {
   "Description": "Aurora cluster endpoint",
   "Value": {
    "Fn::GetAtt": [
     "SharedAuroraCluster30CC7507",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "academia-shared-db-endpoint"
   }
  },
  "ClusterPort": {
   "Description": "Aurora cluster port",
   "Value": {
    "Fn::GetAtt": [
     "SharedAuroraCluster30CC7507",
     "Endpoint.Port"
    ]
   },
   "Export": {
    "Name": "academia-shared-db-port"
   }
  },
  "DbSecretArn": {
   "Description": "Database credentials secret ARN",
   "Value": {
    "Ref": "DbSecret685A0FA5"
   },
   "Export": {
    "Name": "academia-shared-db-secret-arn"
   }
  },
  "DbSecurityGroupId": {
   "Description": "Database security group ID",
   "Value": {
    "Fn::GetAtt": [
     "DbSecurityGroupE9D701AD",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "academia-shared-db-sg-id"
   }
  },
  "ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A": {
   "Value": {
    "Fn::GetAtt": [
     "DbSecurityGroupE9D701AD",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A"
   }
  },
  "ExportsOutputRefSharedVpc96F0F6140AE947C7": {
   "Value": {
    "Ref": "SharedVpc96F0F614"
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputRefSharedVpc96F0F6140AE947C7"
   }
  },
  "ExportsOutputRefDbSecret685A0FA57881E1C6": {
   "Value": {
    "Ref": "DbSecret685A0FA5"
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputRefDbSecret685A0FA57881E1C6"
   }
  },
  "ExportsOutputFnGetAttSharedAuroraCluster30CC7507EndpointAddress75CBD145": {
   "Value": {
    "Fn::GetAtt": [
     "SharedAuroraCluster30CC7507",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputFnGetAttSharedAuroraCluster30CC7507EndpointAddress75CBD145"
   }
  },
  "ExportsOutputFnGetAttSharedAuroraCluster30CC7507EndpointPort11E0C950": {
   "Value": {
    "Fn::GetAtt": [
     "SharedAuroraCluster30CC7507",
     "Endpoint.Port"
    ]
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputFnGetAttSharedAuroraCluster30CC7507EndpointPort11E0C950"
   }
  },
  "ExportsOutputRefSharedVpcIsolatedSubnet1Subnet2FB46B240A7F37F7": {
   "Value": {
    "Ref": "SharedVpcIsolatedSubnet1Subnet2FB46B24"
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputRefSharedVpcIsolatedSubnet1Subnet2FB46B240A7F37F7"
   }
  },
  "ExportsOutputRefSharedVpcIsolatedSubnet2Subnet96BA40FA7DBD9B35": {
   "Value": {
    "Ref": "SharedVpcIsolatedSubnet2Subnet96BA40FA"
   },
   "Export": {
    "Name": "AcademiaSharedDatabase:ExportsOutputRefSharedVpcIsolatedSubnet2Subnet96BA40FA7DBD9B35"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
